--- a/social-back/composer.json
+++ b/social-back/composer.json
@@ -12,8 +12,8 @@
         "beyondcode/laravel-websockets": "^1.14",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
-        "laravel/fortify": "^1.16",
         "laravel/framework": "^8.12",
+        "laravel/sanctum": "*",
         "predis/predis": "^2.1",
         "pusher/pusher-php-server": "^7.2"
     },
