--- a/social-front/package.json
+++ b/social-front/package.json
@@ -1,19 +1,32 @@
 {
-  "name": "gPlex",
+  "name": "gplex",
   "version": "0.1.0",
   "homepage": "/",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.5.0",
     "bootstrap": "^5.2.0",
+    "html-react-parser": "^4.2.2",
     "jodit-react": "^1.3.14",
+    "jwt-decode": "^3.1.2",
+    "path": "^0.12.7",
+    "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.1.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.4",
     "recharts": "^2.1.12",
+    "redux": "^4.2.1",
+    "redux-axios-middleware": "^4.0.1",
+    "redux-persist": "^6.0.0",
+    "redux-persist-cookie-storage": "^1.0.0",
+    "redux-thunk": "^2.4.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
