--- a/social-front/package.json
+++ b/social-front/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gplex",
   "version": "0.1.0",
-  "homepage": "/",
+  "homepage": "/social",
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.0",
     "bootstrap": "^5.2.0",
+    "css-minimizer-webpack-plugin": "^5.0.1",
     "html-react-parser": "^4.2.2",
     "jodit-react": "^1.3.14",
     "jwt-decode": "^3.1.2",
@@ -29,6 +30,7 @@
     "redux-persist": "^6.0.0",
     "redux-persist-cookie-storage": "^1.0.0",
     "redux-thunk": "^2.4.2",
+    "terser-webpack-plugin": "^5.3.9",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
